--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,6 @@
 
+title: "Jaden Mascarenhas Portfolio"
+description: "Portfolio website showcasing my skills, projects, and experience."
+theme: jekyll-theme-minimal
+url: "https://jaden-mas1010.github.io"
+baseurl: "/portfolio"
