--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: "Jaden Mascarenhas Portfolio"
 description: "Portfolio website showcasing my skills, projects, and experience."
-theme: jekyll-theme-minimal
+theme: architect
 url: "https://jaden-mas1010.github.io"
 
